<resources>

    <!-- activity_main -->
    <string name="app_name">HomeSpotter</string>
    <string name="slogan">Find your ideal home quickly and easily.</string>
    <string name="appDesc">With HomeSpotter, exploring, comparing, and choosing the perfect property has never been easier.
                           Our platform allows you to access the best available properties and manage them according to your preferences.
                           Start your journey to your ideal home today!</string>
    <string name="phrase">✨ Discover the place where your dreams come to life! ✨</string>

    <!-- bottom_navigation_menu -->
    <string name="property">Properties</string>
    <string name="messages">Messages</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="select_language">Change Language</string>

    <!-- menu_vivienda_navigation -->
    <string name="search_properties">Property Search</string>
    <string name="my_properties">My Properties</string>

    <!-- activity_vivienda_add -->
    <string name="title">Title</string>
    <string name="type">Property Type</string>
    <string name="price">Price</string>
    <string name="address">Address</string>
    <string name="state">Property State</string>
    <string name="contact">Contact</string>
    <string name="description">Description</string>
    <string name="addPhotos">Upload Photos</string>
    <string name="upload">Upload</string>
    <string name="back">Go Back</string>

    <string name="properties_title">Properties</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="add_property">Add Property</string>
    <string name="filters">Filters</string>
    <string name="type_of_property">Property Type</string>
    <string name="price_range">Price Range</string>
    <string name="min_price">Minimum</string>
    <string name="max_price">Maximum</string>
    <string name="property_status">Status</string>

    <string name="enter_price">Enter the price</string>
    <string name="enter_address">Enter the address</string>

    <string name="enter_description">Enter a description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="property_image_desc">Property Preview</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="app_logo">🏡 HomeSpotter</string>
    <string name="owner_photo">Owner</string>

    <string name="default_title">Title Example</string>
    <string name="default_price">Price: 200.000€</string>
    <string name="default_address">Address: Avocado Street, No. 3</string>

    <string name="apply">Apply</string>
    <string name="title_toolbar_property">Properties</string>
    <string name="sure_cancel">Are you sure you want cancel the operation?</string>

    <string name="fullname_text">Name and Surname:</string>
    <string name="username_text">User Name:</string>
    <string name="password_text">Password:</string>
    <string name="email_text">Email:</string>
    <string name="tlfno_text">Phone Number:</string>

    <string name="fullname_hint">Name and Surname</string>
    <string name="username_hint">User Name</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="tlfno_hint">Phone Number</string>

    <string name="show_password_checkbox">Show Password</string>
    <string name="modify_profile_text">Save Profile</string>
    <string name="thanks">Thanks for Using our App!</string>

    <string name="confirm_modifications">Save Changes</string>
    <string name="modifications_message">Are you sure you want to save your changes to your profile?</string>
    <string name="fill">Please, fill all the fields</string>
    <string name="profile_updated">Profile updated correctly</string>
    <string name="error_profile_update">Error updating the profile</string>
    <string name="error_profile_charging">Profile data could not be uploaded</string>
    <string name="replace_photo">Replace Photo</string>

    <string name="welcome_app">¡Welcome New User!</string>
    <string name="welcome_again_app">¡Welcome Back!</string>

    <string name="btnLogin">Log in</string>
    <string name="btnRegister">Register</string>
    <string name="btnSaveProfile">Save profile</string>
    <string name="btnModify">Modify profile</string>btnLogout
    <string name="btnLogout">Log out</string>
    <string name="btnCancelModify">Cancel</string>

    <string name="register">Register</string>
    <string name="user_not_logged">Error, Login To Like</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="register_now">Not registered yet? Do it now!</string>
    <string name="favorites_tittle">Favorite Properties:</string>

    <string name="missing_chats">Missing Chats...</string>
    <string name="send_message">Send Message</string>
    <string name="send">Send</string>
    <string name="enter_username">Please enter your username</string>
    <string name="enter_password">Please enter your password</string>
    <string name="invalid_credentials">Invalid credentials</string>

    <string name="error_image_path">Failed to get the image path.</string>
    <string name="error_image_upload_no_url">Error: No image URL or delete URL received.</string>
    <string name="error_image_upload">Error uploading image: </string>
    <string name="profile_image_updated">Profile image updated successfully.</string>

    <string name="error_loading_profile">Failed to load profile data.</string>
    <string name="logout_title">Log out</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="logout_success">Successfully logged out.</string>

    <string-array name="property_types">
        <item>House</item>
        <item>Apartment</item>
        <item>Studio</item>
        <item>Duplex</item>
        <item>Beach House</item>
    </string-array>

    <string-array name="property_state">
        <item>Available</item>
        <item>Occupied</item>
        <item>Under Renovation</item>
        <item>Excellent</item>
        <item>Needs Renovation</item>
    </string-array>

</resources>