<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_logo"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginBottom="24dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_app"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginBottom="12dp"
            android:gravity="center" />

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:clipToOutline="true"
            android:background="@drawable/circle_background"
            android:src="@drawable/ic_profile_default" />

        <Button
            android:id="@+id/btn_select_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addPhotos" />

        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:background="@drawable/custom_edittext"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:layout_marginTop="4dp"
            android:layout_height="48dp"
            android:hint="@string/fullname_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/custom_edittext"
            android:drawablePadding="8dp"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:padding="8dp"
            android:textColorHighlight="@color/cardview_dark_background" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:background="@drawable/custom_edittext"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:layout_marginTop="4dp"
            android:layout_height="48dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:background="@drawable/custom_edittext"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:layout_marginTop="4dp"
            android:layout_height="48dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:background="@drawable/custom_edittext"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:layout_marginTop="4dp"
            android:layout_height="48dp"
            android:hint="@string/contact"
            android:inputType="textEmailAddress" />
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="¡Gracias por registrarte en nuestra App!"
            android:textSize="14sp"
            android:textAlignment="center"
            android:id="@+id/signupText"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
</LinearLayout>
